RegressionTests/TestSuiteExport/reject/inline_asm_invalid_immediate_operand_kind.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidImmediateOperandKind

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, #{x}
    };
}
